# beacon-server

./: Cargo.toml  Procfile
migrations/2020-04-04-193236_create_users/: down.sql  up.sql
migrations/2020-04-04-201331_create_messages/: up.sql
migrations/2020-04-05-112644_create_devices/: up.sql
migrations/2020-04-10-114424_create_sessions/: up.sql
migrations/2020-04-15-134721_default_user_id/: down.sql  up.sql
migrations/2020-04-15-143219_adjust_devices/: down.sql  up.sql
migrations/2020-04-18-173414_create_onetimekeys/: down.sql  up.sql
migrations/2020-04-21-171303_create_messages/: up.sql
migrations/2020-04-21-173305_create_mailbox/: down.sql  up.sql
src/: base64enc.rs  database.rs  device.rs  main.rs  message.rs  schema.rs  session.rs  user.rs  utils.rs
