[package]
name = "beacon_server"
version = "0.1.0"
authors = ["Joe Bell"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = "2.0"
actix-rt = "1.0"
actix-service = "1.0"
futures = "0.3"
diesel = { version = "1.4", features = ["postgres", "r2d2", "chrono", "uuidv07", "serde_json"] }
dotenv = "0.15"
r2d2 = "0.8"
ring = "0.16.12"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.12"
uuid = { version = "0.8", features = ["v4", "serde"]}